--- a/articles/config/2015-12-01-getting-started-with-docker-by-dockerizing-this-blog.yml
+++ b/articles/config/2015-12-01-getting-started-with-docker-by-dockerizing-this-blog.yml
@@ -1,7 +1,7 @@
 author: madflojo
 date: 2015-12-01 03:00:00-07:00
 pubdate: Tue, 1 Dec 2015 03:00:00 -07:00
-popularity: False
+popularity: True
 slug: getting-started-with-docker-by-dockerizing-this-blog
 title: Getting started with Docker by Dockerizing this Blog
 description: This article covers the basic concepts of Docker and how to Dockerize an application by creating a custom Dockerfile
