Adding extension for hamerkop and removing *.sh

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,16 +9,21 @@ services:
   
 before_install:
   - docker build -t blog .
+  - pip install -y unittest
+  - pip install -y mock
+  - pip install -y selenium
+  - pip install -y coverage
+  - pip install -y coveralls
 
 install:
   - docker run -d -p 127.0.0.1:80:80 --name blog blog
   
 script:
+  # Basic validations
   - docker ps | grep -q "blog"
-  - bash tests/check_index.sh
-  - bash tests/check_index_status.sh
-#  - bash tests/check_feed.sh
-  - bash tests/check_feed_status.sh
+  # Automated tests
+  - python tests.py
+  - coverage run tests.py
 
 after_success:
   - coveralls
