--- a/.travis.yml
+++ b/.travis.yml
@@ -9,11 +9,11 @@ services:
   
 before_install:
   - docker build -t blog .
-  - pip install mock
-  - pip install coverage
-  - pip install coveralls
-  - pip install requests
-  - pip install feedparse
+  - sudo pip install mock
+  - sudo pip install coverage
+  - sudo pip install coveralls
+  - sudo pip install requests
+  - sudo pip install feedparse
 
 install:
   - docker run -d -p 127.0.0.1:80:80 --name blog blog
