--- a/.travis.yml
+++ b/.travis.yml
@@ -9,10 +9,10 @@ services:
   
 before_install:
   - docker build -t blog .
-  - sudo pip install -r requirements.txt
-  - sudo pip install mock
-  - sudo pip install requests
-  - sudo pip install feedparser
+  - sudo -H pip install -r requirements.txt
+  - sudo -H pip install mock
+  - sudo -H pip install requests
+  - sudo -H pip install feedparser
 
 install:
   - docker run -d -p 127.0.0.1:80:80 --name blog blog
