--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,6 @@
-sudo: required
+language: python
+python:
+  - 2.7
 
 hosts:
   - feed.bencane.com
@@ -9,10 +11,10 @@ services:
   
 before_install:
   - docker build -t blog .
-  - sudo -H pip install -r requirements.txt
-  - sudo -H pip install mock
-  - sudo -H pip install requests
-  - sudo -H pip install feedparser
+  - pip install -r requirements.txt
+  - pip install mock
+  - pip install requests
+  - pip install feedparser
 
 install:
   - docker run -d -p 127.0.0.1:80:80 --name blog blog
