Adding script field

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,3 +8,6 @@ services:
 install:
   - docker build -t blog .
   - docker run -d -p 127.0.0.1:80:80 --name blog blog
+
+script:
+  - docker ps | grep -q blog
