Adding tests.py execution

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,5 +9,19 @@ install:
   - docker build -t blog .
   - docker run -d -p 127.0.0.1:80:80 --name blog blog
 
+before_script:
+  - pip install -r requirements.txt
+  - pip install mock
+  - pip install requests
+  - pip install feedparser
+  - pip install coverage
+  - pip install coveralls
+
+
 script:
   - docker ps | grep -q blog
+  - python tests.py
+  - coverage run tests.py
+
+after_success:
+  coveralls
