Adding hosts back

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,10 @@ python:
 services:
   - docker
 
+hosts:
+  - feed.bencane.com
+  - bencane.com
+
 install:
   - docker build -t blog .
   - docker run -d -p 127.0.0.1:80:80 --name blog blog
