--- a/articles/config/2015-09-22-preventing-duplicate-cron-job-executions.yml
+++ b/articles/config/2015-09-22-preventing-duplicate-cron-job-executions.yml
@@ -6,6 +6,7 @@ slug: preventing-duplicate-cron-job-executions
 title: "Preventing duplicate cron job executions"
 description: "This article will show both BASH code and utilities that can be used to prevent a cron job from having multiple running instances"
 post_id: 126
+read_time: 9
 categories:
 - Bash Scripting
 - Cron jobs
