--- a/articles/config/2015-12-01-getting-started-with-docker-by-dockerizing-this-blog.yml
+++ b/articles/config/2015-12-01-getting-started-with-docker-by-dockerizing-this-blog.yml
@@ -6,6 +6,7 @@ slug: getting-started-with-docker-by-dockerizing-this-blog
 title: Getting started with Docker by Dockerizing this Blog
 description: This article covers the basic concepts of Docker and how to Dockerize an application by creating a custom Dockerfile
 post_id: 127
+read_time: 15
 categories:
 - Docker
 - Containers
