Revising templates and stuff

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,10 +1,11 @@
 user nginx;
 worker_processes 4;
 pid /var/run/nginx.pid;
+worker_rlimit_nofile 8192;
 #daemon off;
 
 events {
-    worker_connections 1024;
+    worker_connections 4096;
     multi_accept on;
 }
 
@@ -24,8 +25,8 @@ http {
     keepalive_timeout 30;
     keepalive_requests 1000;
 
-    open_file_cache max=1000 inactive=20s; 
-    open_file_cache_valid 30s; 
+    open_file_cache max=2048 inactive=10s;
+    open_file_cache_valid 120s;
     open_file_cache_min_uses 2;
     open_file_cache_errors on;
 
@@ -37,7 +38,7 @@ http {
     gzip_buffers 16 8k;
     gzip_http_version 1.1;
     gzip_disable "MSIE [1-6].(?!.*SV1)";
-    gzip_types text/css text/x-component application/x-javascript application/javascript text/javascript text/x-js text/richtext 
+    gzip_types text/css text/x-component application/x-javascript application/javascript text/javascript text/x-js text/richtext
                 image/svg+xml text/plain text/xsd text/xsl text/xml image/x-icon;
 
     ##
@@ -48,6 +49,6 @@ http {
     ##
     # Virtual Host Configs
     ##
-    include /etc/nginx/sites-enabled/*;  
+    include /etc/nginx/sites-enabled/*;
 
 }
