--- a/nginx/bencane.com.conf
+++ b/nginx/bencane.com.conf
@@ -10,6 +10,12 @@ server {
     index index.xml index.html index.htm;
 
     include globals/htmlglobal.conf;
+
+    error_page 404 /404.html;
+        location = /404.html {
+                root /usr/share/nginx/html;
+                internal;
+        }
 }
 
 server {
