--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -41,7 +41,8 @@ http {
     gzip_types text/css text/x-component application/x-javascript application/javascript text/javascript text/x-js text/richtext
                 image/svg+xml text/plain text/xsd text/xsl text/xml image/x-icon;
 
-    ##
+    error_page 404 /404.html;
+    
     # Core Configs
     ##
     include /etc/nginx/conf.d/*;
