--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -42,6 +42,7 @@ http {
                 image/svg+xml text/plain text/xsd text/xsl text/xml image/x-icon;
 
     error_page 404 /404.html;
+    error_page 403 /403.html;
     
     # Core Configs
     ##
