Moving pubdate of stories

--- a/bencane/config/_default/menus.toml
+++ b/bencane/config/_default/menus.toml
@@ -18,6 +18,11 @@
   url = "#talks"
   weight = 30
 
+[[main]]
+  name = "Feed"
+  url = "/feed/index.xml"
+  weight = 40
+
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/files/cv.pdf` and uncomment the lines below.
 # [[main]]
