Fixing nginx config

--- a/nginx/bencane.com.conf
+++ b/nginx/bencane.com.conf
@@ -7,7 +7,7 @@ server {
     root /usr/share/nginx/html;
     access_log /dev/stdout;
     error_log /dev/stderr;
-    index index.xml index.html index.htm;
+    index index.html index.htm index.xml;
 
     include globals/htmlglobal.conf;
 
