Adding another redirect

--- a/nginx/bencane.com.conf
+++ b/nginx/bencane.com.conf
@@ -13,6 +13,7 @@ server {
 
     # Moving to Medium
     rewrite ^/2014/09/02/understanding-exit-codes-and-how-to-use-them-in-bash-scripts/$ https://madflojo.medium.com/understanding-exit-codes-in-bash-6942a8b96ce5 permanent;
+    rewrite ^/2012/08/06/troubleshooting-high-io-wait-in-linux/$ https://madflojo.medium.com/troubleshooting-high-i-o-wait-in-linux-358080d57b69;
 
     error_page 404 /404.html;
         location = /404.html {
