Updating more redirects

--- a/nginx/bencane.com.conf
+++ b/nginx/bencane.com.conf
@@ -14,6 +14,11 @@ server {
     # Moving to Medium
     rewrite ^/2014/09/02/understanding-exit-codes-and-how-to-use-them-in-bash-scripts/$ https://madflojo.medium.com/understanding-exit-codes-in-bash-6942a8b96ce5 permanent;
     rewrite ^/2012/08/06/troubleshooting-high-io-wait-in-linux/$ https://madflojo.medium.com/troubleshooting-high-i-o-wait-in-linux-358080d57b69;
+    rewrite ^/2020/06/15/dont-mock-a-db-use-docker-compose/$ https://medium.com/swlh/dont-mock-databases-just-run-them-with-docker-1564ae21117f;
+    rewrite ^/2020/12/29/how-to-structure-a-golang-cli-project/$ https://medium.com/swlh/how-to-structure-a-go-command-line-project-788c318a1d8c;
+    rewrite ^/2021/02/15/golangs-interfaces-explained-with-mocks/$ https://medium.com/swlh/golangs-interfaces-explained-with-mocks-886f69eca6f0;
+    rewrite ^/2021/05/18/using-viper-with-consul-to-configure-go-apps/$ https://madflojo.medium.com/using-viper-with-consul-to-configure-golang-applications-eaa84394b8de;
+    rewrite ^/2021/09/08/creating-middleware-with-httprouter-a-golang-multiplexer/$ https://medium.com/codex/creating-middleware-with-httprouter-52cbc786b02a;
 
     error_page 404 /404.html;
         location = /404.html {
