Adding another redirect

--- a/nginx/bencane.com.conf
+++ b/nginx/bencane.com.conf
@@ -19,6 +19,7 @@ server {
     rewrite ^/2021/02/15/golangs-interfaces-explained-with-mocks/$ https://medium.com/swlh/golangs-interfaces-explained-with-mocks-886f69eca6f0;
     rewrite ^/2021/05/18/using-viper-with-consul-to-configure-go-apps/$ https://madflojo.medium.com/using-viper-with-consul-to-configure-golang-applications-eaa84394b8de;
     rewrite ^/2021/09/08/creating-middleware-with-httprouter-a-golang-multiplexer/$ https://medium.com/codex/creating-middleware-with-httprouter-52cbc786b02a;
+    rewrite ^/2020/12/08/maps-vs-structs-for-json/$ https://medium.com/swlh/golang-maps-vs-structs-which-method-should-you-use-to-parse-json-16c7ad7be171;
 
     error_page 404 /404.html;
         location = /404.html {
