Resume for a landing page

--- a/nginx/bencane.com.conf
+++ b/nginx/bencane.com.conf
@@ -12,7 +12,7 @@ server {
     include globals/htmlglobal.conf;
 
     # Moving to Medium
-    rewrite ^/$ https://medium.com/@madflojo;
+    # rewrite ^/$ https://medium.com/@madflojo;
     rewrite ^/2014/09/02/understanding-exit-codes-and-how-to-use-them-in-bash-scripts/$ https://madflojo.medium.com/understanding-exit-codes-in-bash-6942a8b96ce5 permanent;
     rewrite ^/2012/08/06/troubleshooting-high-io-wait-in-linux/$ https://madflojo.medium.com/troubleshooting-high-i-o-wait-in-linux-358080d57b69;
     rewrite ^/2020/06/15/dont-mock-a-db-use-docker-compose/$ https://medium.com/swlh/dont-mock-databases-just-run-them-with-docker-1564ae21117f;
